fixed the gallery overflowand centered images

--- a/wp-content/themes/novapioneer/assets-src/sass/external/_ext-slippry-slider.scss
+++ b/wp-content/themes/novapioneer/assets-src/sass/external/_ext-slippry-slider.scss
@@ -135,11 +135,18 @@ $arrows_url: '/wp-content/themes/novapioneer/assets/slippry/images/arrows.svg' !
     display: block;
     width: 100%;
     > img { // with one image as content -> full size
-      margin: 0;
-      padding: 0;
+      // margin: 0;
+      // padding: 0;
       display: block;
       width: 100%;
       border: 0;
+      margin-top:25%;
+      position: absolute;
+      margin: auto;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
   }
 }
